# Lunchbox

./: .clang-format  .gitexternals  .gitignore  .gitsubprojects  .travis.yml  ACKNOWLEDGEMENTS.txt  AUTHORS.txt  Any.h  AnySerialization.cpp  AnySerialization.h  Attribute.cpp  Attribute.h  AttributeIterator.h  CHANGES.txt  CMakeLists.txt  Change.cpp  Change.h  ChildIterator.h  Commit.cpp  Commit.h  Context.cpp  Context.h  ContextPtr.h  GNUmakefile  Iterator.h  LICENSE.txt  Node.cpp  Node.h  README.md  Serializable.h  VectorIterator.h  any.h  attribute.cpp  attribute.h  change.cpp  change.h  commit.cpp  context.cpp  context.h  contextPtr.h  (+4 more)
CMake/: CPackConfig.cmake  Common.cmake  CommonCTest.cmake  DoxygenRule.cmake  FindHWLOC.cmake  FindPackages.cmake  FindPackagesPost.cmake  FindRequired.cmake  GNUModules.cmake  GitExternal.cmake  LunchBox.in.spec  Lunchbox.cmake  Lunchbox.in.spec  Lunchbox.spec  LunchboxCPack.cmake  TestCPP11.cmake
doc/: CMakeLists.txt  Changelog.md  Doxyfile  README.Win  RelNotes.dox  RelNotes.md
lunchbox/: CMakeLists.txt  Lunchbox.in.pc  Lunchbox.pc  algorithm.h  any.cpp  any.h  anySerialization.h  api.h  array.h  atomic.cpp  atomic.h  base.h  bitOperation.h  buffer.h  buffer.ipp  clock.cpp  clock.h  compiler.h  compressor.cpp  compressor.h  compressorChunk.h  compressorInfo.h  compressorResult.h  condition.cpp  condition.h  condition_w32.ipp  configure.cmake  daemon.h  debug.cpp  debug.h  decompressor.cpp  decompressor.h  defines.h  downloader.cpp  downloader.h  dso.cpp  dso.h  factory.hpp  file.cpp  file.h  (+107 more)
lunchbox/avahi/: servus.h
lunchbox/ceph/: persistentMap.h
lunchbox/compressor/: compressor.cpp  compressor.h  compressorFastLZ.cpp  compressorFastLZ.h  compressorLZF.cpp  compressorLZF.h  compressorRLE.ipp  compressorRLE10A2.cpp  compressorRLE10A2.h  compressorRLE4B.cpp  compressorRLE4B.h  compressorRLE4BU.cpp  compressorRLE4BU.h  compressorRLE4HF.cpp  compressorRLE4HF.h  compressorRLE565.cpp  compressorRLE565.h  compressorRLEB.cpp  compressorRLEB.h  compressorRLEYUV.cpp  compressorRLEYUV.h  compressorSnappy.cpp  compressorSnappy.h  compressorTurboJPEG.cpp  compressorTurboJPEG.h
lunchbox/compressor/liblzf/: lzf_c.c
lunchbox/compressor/snappy/: snappy-internal.h  snappy-sinksource.cc  snappy-stubs-internal.h  snappy-stubs-public.h  snappy.cc
lunchbox/detail/: threadID.h
lunchbox/dnssd/: servus.h
lunchbox/leveldb/: persistentMap.h
lunchbox/md5/: md5.cc  md5.hh
lunchbox/memcached/: persistentMap.h
lunchbox/none/: servus.h
lunchbox/plugins/: compressor.h
lunchbox/skv/: persistentMap.h
pthreads/: CMakeLists.txt
tests/: CMakeLists.txt  any.cpp  anySerialization.cpp  bitOperation.cpp  buffer.cpp  clock.cpp  compressor.cpp  debug.cpp  dso.cpp  file.cpp  future.cpp  init.cpp  intervalSet.cpp  ioPluginFactory.cpp  issue1.cpp  issue5.cpp  lfQueue.cpp  lfVector.cpp  lock.cpp  memory.cpp  memoryMap.cpp  monitor.cpp  mpi.cpp  mtQueue.cpp  openmp.cpp  perThread.cpp  persistentMap.cpp  pluginFactory.cpp  refPtr.cpp  requestHandler.cpp  result.cpp  rng.cpp  rwLock.cpp  serialize.h  servus.cpp  string.cpp  test.h  thread.cpp  threadPool.cpp  timedLock.cpp  (+4 more)
tests/perf/: lfVector.cpp  lock.cpp  memory.cpp  mutex.cpp  rwLock.cpp
